--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -78,40 +78,49 @@
 \input{command}
 
 \begin{abstract}
-It is paramount for safety-critical (SC) systems to be formally verified to avoid 
-catastrophic consequences  of malfunctioning (\eg, loss of life) due to bugs. 
-However, static verification techniques like model checking might not be a feasible option in this context due to the state-space 
-explosion problem. Runtime monitoring (RM) is a promising alternative 
-%to its static counterpart 
-that can check the execution of SC systems for violations of some desired properties in runtime. One possibility of using RM in this context is to instrument 
-the system 
-%under-monitoring 
-%to 
-in such a way so that it 
-produces the relevant events for checking the desired 
-properties. However, there is a general trend of using commercial-off-the-shelf (COTS) components 
-while designing SC systems and these components are like blackboxes and hence might not be amenable to  
-intrumentation. In this paper, we develop a RM approach that monitors an autonomous research vehicle (ARV) system and recount our experience with it. 
-The ARV system uses several COTS components hence our monitor passively and periodically samples the ARV system bus 
-%(\ie, the  channel 
-%with which different components of the ARV system communicate among each other) 
-and converts the low level signals to high level 
-property-constructs (\ie, propositions). For specifying the desired properties, we use a propositional discrete-time temporal logic, Metric Temporal Logic (MTL). 
-We then develop an efficient runtime monitoring algorithm, \monitor, that takes as input a MTL property \policy and a finite trace $\sigma$, and \emph{eagerly} 
-checks for violation of \policy in $\sigma$. We show the efficacy of \monitor by implementing it and empirically evaluating it  
-with some well-defined desired safety properties and against logs obtained from the testing of an ARV system. 
-\monitor were able to detect violations of several safety requirements. 
-%%% major points to push
-%%
-%% dynamic programming algorithm
-%% 	also rewriting-based to a point
-%% embedded runtime monitor 
-%%	handles black-box systems
-%% 	reasonable overhead
-%%	aggressive monitoring, future/past (some specifications get checked faster in future then past)
-%% semi-formal mapping!!
-%%	remember, others do it, but noone is explicit
-%%
+
+Although runtime monitoring (RM) is a promising technique to improve the verification of complex safety-critical systems, the general design trend towards utilizing black-box commercial-off-the-shelf (COTS) components means that these systems are not always amenable to instrumentation which is commonly used to produce the relevant events necessary for checking the desired properties.
+In this paper, we develop an online, real-time monitoring approach that targets an autonomous research vehicle (ARV) and recount our experience with it. 
+To avoid instrumentation we passively monitor the target system by generating high-level system properties from the observed network state. 
+We then develop an efficient runtime monitoring algorithm, \monitor, that \emph{eagerly} checks for violations of desired properties written in a bounded metric temporal logic. 
+We show the efficacy of \monitor by implementing it and empirically evaluating it against logs obtained from the testing of an ARV system. \monitor was able to detect violations of several safety requirements.
+
+
+
+%It is paramount for safety-critical (SC) systems to be formally verified to avoid 
+%catastrophic consequences  of malfunctioning (\eg, loss of life) due to bugs. 
+%However, static verification techniques like model checking might not be a feasible option in this context due to the state-space 
+%explosion problem. Runtime monitoring (RM) is a promising alternative 
+%%to its static counterpart 
+%that can check the execution of SC systems for violations of some desired properties in runtime. One possibility of using RM in this context is to instrument 
+%the system 
+%%under-monitoring 
+%%to 
+%in such a way so that it 
+%produces the relevant events for checking the desired 
+%properties. However, there is a general trend of using commercial-off-the-shelf (COTS) components 
+%while designing SC systems and these components are like blackboxes and hence might not be amenable to  
+%intrumentation. In this paper, we develop a RM approach that monitors an autonomous research vehicle (ARV) system and recount our experience with it. 
+%The ARV system uses several COTS components hence our monitor passively and periodically samples the ARV system bus 
+%%(\ie, the  channel 
+%%with which different components of the ARV system communicate among each other) 
+%and converts the low level signals to high level 
+%property-constructs (\ie, propositions). For specifying the desired properties, we use a propositional discrete-time temporal logic, Metric Temporal Logic (MTL). 
+%We then develop an efficient runtime monitoring algorithm, \monitor, that takes as input a MTL property \policy and a finite trace $\sigma$, and \emph{eagerly} 
+%checks for violation of \policy in $\sigma$. We show the efficacy of \monitor by implementing it and empirically evaluating it  
+%with some well-defined desired safety properties and against logs obtained from the testing of an ARV system. 
+%\monitor were able to detect violations of several safety requirements. 
+%%%% major points to push
+%%%
+%%% dynamic programming algorithm
+%%% 	also rewriting-based to a point
+%%% embedded runtime monitor 
+%%%	handles black-box systems
+%%% 	reasonable overhead
+%%%	aggressive monitoring, future/past (some specifications get checked faster in future then past)
+%%% semi-formal mapping!!
+%%%	remember, others do it, but noone is explicit
+%%%
 \end{abstract}
 
 
