--- a/rv2015/MergedBib.bib
+++ b/rv2015/MergedBib.bib
@@ -10504,3 +10504,1087 @@
   timestamp = {2014.12.12}
 }
 
+@inproceedings{buchi62,
+    author = {B\"uchi, Julius R.},
+    booktitle = {International Congress on Logic, Methodology, and Philosophy of Science},
+    citeulike-article-id = {2948751},
+    keywords = {automata\_theory},
+    pages = {1--11},
+    posted-at = {2008-07-01 16:58:48},
+    priority = {0},
+    publisher = {Stanford University Press},
+    title = {{On a Decision Method in Restricted Second-Order Arithmetic}},
+    year = {1962}
+}
+
+@misc{p3p1,
+  abstract = {This is the specification of the Platform for Privacy Preferences (P3P). This document, along with its normative references, includes all the specification necessary for the implementation of interoperable P3P applications.},
+  added-at = {2009-01-14T00:43:43.000+0100},
+  author = {Cranor, Lorrie and Langheinrich, Marc and Marchiori, Massimo and Presler-Marshall, Martin and Reagle, Joseph M.},
+  biburl = {http://www.bibsonomy.org/bibtex/233ade20e2df884c9f66d0abf0e4755a0/dret},
+  description = {dret'd bibliography},
+  howpublished = {World Wide Web Consortium, Recommendation REC-P3P-20020416},
+  interhash = {f5ed818a297aa76da2b5a983ec25ee31},
+  intrahash = {33ade20e2df884c9f66d0abf0e4755a0},
+  keywords = {imported},
+  month = {April},
+  timestamp = {2009-01-14T00:43:43.000+0100},
+  title = {The Platform for Privacy Preferences 1.0 (P3P1.0) Specification},
+  topic = {p3p[1]},
+  uri = {http://www.w3.org/TR/2002/REC-P3P-20020416},
+  year = 2002
+}
+
+@article{p3p2,
+ author = {Reagle, Joseph and Cranor, Lorrie Faith},
+ title = {The Platform for Privacy Preferences},
+ journal = {Commun. ACM},
+ issue_date = {Feb. 1999},
+ volume = {42},
+ number = {2},
+ month = feb,
+ year = {1999},
+ issn = {0001-0782},
+ pages = {48--55},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/293411.293455},
+ doi = {10.1145/293411.293455},
+ acmid = {293455},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
+
+@TECHREPORT{CAV14,
+  AUTHOR =        {Omar Chowdhury and Limin Jia and Deepak Garg and Anupam Datta},
+  TITLE =         {Temporal Mode-Checking for Runtime Monitoring of Privacy Policies},
+  NUMBER =        {CMU-CyLab-14-005},
+  INSTITUTION =   {Cylab, Carnegie Mellon University},
+  ADDRESS =       {Pittsburgh, Pennsylvania},
+  MONTH =         {May},
+  YEAR  =         {2014},
+  URL   =         {/user/web/htdocs/publications/tech/TR/MSU-CSE-00-2.ps.gz}
+}
+
+@article{JohnsonHIE,
+author = {Johnson, Kevin B and Unertl, Kim M and Chen, Qingxia and Lorenzi, Nancy M and Nian, Hui and Bailey, James and Frisse, Mark}, 
+title = {Health information exchange usage in emergency departments and clinics: the who, what, and why},
+volume = {18}, 
+number = {5}, 
+pages = {690-697}, 
+year = {2011}, 
+journal = {Journal of the American Medical Informatics Association} 
+}
+
+@techreport{EPAL1,
+  added-at = {2013-03-25T19:03:53.000+0100},
+  address = {R\"{u}schlikon},
+  author = {Ashley, Paul and Hada, Satoshi and Karjoth, G\"{u}nter and Powers, Calvin and Schunter, Matthias},
+  biburl = {http://www.bibsonomy.org/bibtex/259b5d09673cdf0341b832b22f1ad2d1d/privtec},
+  institution = {IBM Research},
+  interhash = {ff2f9d50fde0169423b27fb488e46f04},
+  intrahash = {59b5d09673cdf0341b832b22f1ad2d1d},
+  keywords = {},
+  owner = {jonny},
+  timestamp = {2013-03-25T19:03:53.000+0100},
+  title = {{E}nterprise {P}rivacy {A}uthorization {L}anguage ({EPAL})},
+  year = 2003
+}
+
+@inproceedings{EPAL4,
+  author    = {G{\"u}nter Karjoth and
+               Matthias Schunter},
+  title     = {A Privacy Policy Model for Enterprises},
+  booktitle = {15th IEEE Computer Security Foundations Workshop (CSFW-15
+               2002), 24-26 June 2002, Cape Breton, Nova Scotia, Canada},
+  year      = {2002},
+  isbn      = {0-7695-1689-0},
+  pages     = {271-281},
+  ee        = {http://doi.ieeecomputersociety.org/10.1109/CSFW.2002.1021821},
+}
+
+@inproceedings{EPAL3,
+ author = {G{\"u}nter Karjoth and
+               Matthias Schunter},
+ title = {A Privacy Policy Model for Enterprises},
+ booktitle = {Proceedings of the 15th IEEE Workshop on Computer Security Foundations},
+ series = {CSFW '02},
+ year = {2002},
+ isbn = {0-7695-1689-0},
+ pages = {271--281},
+  url = {http://dx.doi.org/10.1109/CSFW.2006.24},
+ doi = {10.1109/CSFW.2006.24},
+ acmid = {1155669},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
+
+
+
+
+
+
+@inproceedings{EPAL2,
+  added-at = {2003-07-25T00:00:00.000+0200},
+  author = {Karjoth, Günter and Schunter, Matthias},
+  biburl = {http://www.bibsonomy.org/bibtex/27838aec181e9829a965d2cbaad4e0e40/dblp},
+  booktitle = {CSFW},
+  crossref = {conf/csfw/2002},
+  date = {2003-07-25},
+  description = {dblp},
+  ee = {http://csdl.computer.org/comp/proceedings/csfw/2002/1689/00/16890271abs.htm},
+  interhash = {e238fef8150c94aef6a4925fca03c045},
+  intrahash = {7838aec181e9829a965d2cbaad4e0e40},
+  isbn = {0-7695-1689-0},
+  keywords = {dblp},
+  pages = {271-281},
+  publisher = {IEEE Computer Society},
+  timestamp = {2003-07-25T00:00:00.000+0200},
+  title = {A Privacy Policy Model for Enterprises.},
+  url = {http://dblp.uni-trier.de/db/conf/csfw/csfw2002.html#KarjothS02},
+  year = 2002
+}
+
+@inproceedings{GJD11,
+ author = {Garg, Deepak and Jia, Limin and Datta, Anupam},
+ title = {Policy Auditing over Incomplete Logs: Theory, Implementation and Applications},
+ booktitle = {Proceedings of the 18th ACM Conference on Computer and Communications Security},
+ series = {CCS '11},
+ year = {2011},
+ isbn = {978-1-4503-0948-6},
+ location = {Chicago, Illinois, USA},
+ pages = {151--162},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2046707.2046726},
+ doi = {10.1145/2046707.2046726},
+ acmid = {2046726},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {audit, formal logic, incomplete logs, privacy policy},
+} 
+
+
+@inproceedings{BDMN06,
+ author = {Barth, Adam and Datta, Anupam and Mitchell, John C. and Nissenbaum, Helen},
+ title = {Privacy and Contextual Integrity: Framework and Applications},
+ booktitle = {Proceedings of the 2006 IEEE Symposium on Security and Privacy},
+ series = {SP '06},
+ year = {2006},
+ isbn = {0-7695-2574-1},
+ pages = {184--198},
+ numpages = {15},
+ url = {http://dx.doi.org/10.1109/SP.2006.32},
+ doi = {10.1109/SP.2006.32},
+ acmid = {1130373},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
+
+@inproceedings{BMDS07,
+ author = {Barth, Adam and Mitchell, John and Datta, Anupam and Sundaram, Sharada},
+ title = {Privacy and Utility in Business Processes},
+ booktitle = {Proceedings of the 20th IEEE Computer Security Foundations Symposium},
+ series = {CSF '07},
+ year = {2007},
+ isbn = {0-7695-2819-8},
+ pages = {279--294},
+ numpages = {16},
+ url = {http://dx.doi.org/10.1109/CSF.2007.26},
+ doi = {10.1109/CSF.2007.26},
+ acmid = {1270658},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
+
+@inproceedings{DGJKD10,
+ author = {DeYoung, Henry and Garg, Deepak and Jia, Limin and Kaynar, Dilsun and Datta, Anupam},
+ title = {Experiences in the Logical Specification of the HIPAA and GLBA Privacy Laws},
+ booktitle = {Proceedings of the 9th Annual ACM Workshop on Privacy in the Electronic Society},
+ series = {WPES '10},
+ year = {2010},
+ isbn = {978-1-4503-0096-4},
+ location = {Chicago, Illinois, USA},
+ pages = {73--82},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1866919.1866930},
+ doi = {10.1145/1866919.1866930},
+ acmid = {1866930},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {fixed point logic, glba, hipaa, privacy policy specification},
+} 
+
+@inproceedings{MGL06,
+ author = {May, Michael J. and Gunter, Carl A. and Lee, Insup},
+ title = {Privacy APIs: Access Control Techniques to Analyze and Verify Legal Privacy Policies},
+ booktitle = {Proceedings of the 19th IEEE Workshop on Computer Security Foundations},
+ series = {CSFW '06},
+ year = {2006},
+ isbn = {0-7695-2615-2},
+ pages = {85--97},
+ numpages = {13},
+ url = {http://dx.doi.org/10.1109/CSFW.2006.24},
+ doi = {10.1109/CSFW.2006.24},
+ acmid = {1155669},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
+
+@incollection{BKMZ12,
+year={2013},
+isbn={978-3-642-35631-5},
+booktitle={Runtime Verification},
+volume={7687},
+series={Lecture Notes in Computer Science},
+editor={Qadeer, Shaz and Tasiran, Serdar},
+doi={10.1007/978-3-642-35632-2_17},
+title={Monitoring Compliance Policies over Incomplete and Disagreeing Logs},
+url={http://dx.doi.org/10.1007/978-3-642-35632-2_17},
+publisher={Springer Berlin Heidelberg},
+author={Basin, David and Klaedtke, Felix and Marinovic, Srdjan and Z\u{a}linescu, Eugen},
+pages={151-167}
+}
+
+@incollection{BKM11,
+year={2012},
+isbn={978-3-642-29859-2},
+booktitle={Runtime Verification},
+volume={7186},
+series={Lecture Notes in Computer Science},
+editor={Khurshid, Sarfraz and Sen, Koushik},
+doi={10.1007/978-3-642-29860-8_20},
+title={Algorithms for Monitoring Real-Time Properties},
+url={http://dx.doi.org/10.1007/978-3-642-29860-8_20},
+publisher={Springer Berlin Heidelberg},
+author={Basin, David and Klaedtke, Felix and Z\u{a}linescu, Eugen},
+pages={260-275}
+}
+
+
+@incollection{bauer13,
+year={2013},
+isbn={978-3-642-40786-4},
+booktitle={Runtime Verification},
+volume={8174},
+series={Lecture Notes in Computer Science},
+editor={Legay, Axel and Bensalem, Saddek},
+doi={10.1007/978-3-642-40787-1_4},
+title={From Propositional to First-Order Monitoring},
+url={http://dx.doi.org/10.1007/978-3-642-40787-1_4},
+publisher={Springer Berlin Heidelberg},
+author={Bauer, Andreas and K\"{u}ster, Jan-Christoph and Vegliach, Gil},
+pages={59-75}
+}
+
+@misc{PCIDSS,
+    author = "{The PCI Security Standards Council}",
+    title = "{Payment Card Industry Data Security Standard (PCI DSS).}",
+    note = "Available at https://www.pcisecuritystandards.org/security\_standards/documents.php?document=pci\_dss\_v2-0\%pci\_dss\_v2-0"
+}
+
+@MISC{GLBA,
+    author = {{Senate Banking Committee}},
+    title = {{G}ramm-{L}each-{B}liley {A}ct},
+    note = {Public Law 106-102},
+    year = {1999}
+}
+
+@MISC{HIPAA,
+    author = {{Health Resources and Services Administration}},
+    title = {Health Insurance Portability and Accountability Act},
+    note = {Public Law 104-191},
+    year = {1996}
+}
+
+@MISC{FERPA,
+    author = {{U.S. Department of Education}},
+    title = {Family Educational Rights and Privacy Act},
+    note = {20 U.S.C. \S1232g; 34 CFR Part 99},
+    year = {1974}
+}
+
+@MISC{SOX,
+    author = {{Securities and Exchange Commission}},
+    title = {Sarbanes-Oxley Act},
+    note = {Public Law 107-204},
+    year = {2002}
+}
+
+@article{modechecking,
+year={1994},
+issn={0934-5043},
+journal={Formal Aspects of Computing},
+volume={6},
+number={1},
+doi={10.1007/BF01213601},
+title={Reasoning about Prolog programs: From modes through types to assertions},
+url={http://dx.doi.org/10.1007/BF01213601},
+publisher={Springer-Verlag},
+keywords={Prolog programs; Program verification},
+author={Apt, KrzysztofR. and Marchiori, Elena},
+pages={743-765},
+language={English}
+}
+
+@book{mel81,
+  title={The automatic generation of mode declarations for Prolog programs},
+  author={Mellish, Christopher S},
+  year={1981},
+  publisher={Department of Artificial Intelligence, University of Edinburgh}
+}
+
+@inproceedings{mel81a,
+  author = {Mellish, Chris S},
+  booktitle = {Workshop on Logic Programming},
+  title = {The Automatic Generation of Mode Declarations for Prolog Programs},
+  year = 1982
+}
+
+@incollection{bauer12,
+year={2012},
+isbn={978-3-642-32758-2},
+booktitle={FM 2012: Formal Methods},
+volume={7436},
+series={Lecture Notes in Computer Science},
+editor={Giannakopoulou, Dimitra and M\'{e}ry, Dominique},
+doi={10.1007/978-3-642-32759-9_10},
+title={Decentralised {LTL} Monitoring},
+url={http://dx.doi.org/10.1007/978-3-642-32759-9_10},
+publisher={Springer Berlin Heidelberg},
+author={Bauer, Andreas and Falcone, Yli\`{e}s},
+pages={85-100}
+}
+
+@INPROCEEDINGS{havelund01, 
+author={Giannakopoulou, D. and Havelund, K.}, 
+booktitle={Automated Software Engineering, 2001. (ASE 2001). Proceedings. 16th Annual International Conference on}, 
+title={Automata-based verification of temporal properties on running programs}, 
+year={2001}, 
+month={Nov}, 
+pages={412-416}, 
+keywords={finite automata;formal specification;program verification;temporal logic;Buchi automata conversion;Java programs;automata-based verification;finite state automata;generic JPaX framework;linear temporal logic specifications;observers;program behavior;running programs;runtime analysis;temporal properties;Algorithm design and analysis;Automata;Computer industry;Computerized monitoring;Java;Logic testing;NASA;Runtime;Software engineering;Space technology}, 
+doi={10.1109/ASE.2001.989841}, 
+ISSN={1938-4300}
+}
+
+@InProceedings{bauer06,
+  author =	 {Andreas Bauer and Martin Leucker and Christian Schallhart},
+  editor =       {S. Arun-Kumar and N. Garg},
+  title =	 {Monitoring of real-time properties},
+  booktitle =	 {Proceedings of the 26th Conference on Foundations of
+         Software Technology and Theoretical Computer Science (FSTTCS)},
+  year =	 2006,
+  series =	 {Lecture Notes in Computer Science},
+  volume =	 4337,
+  month =	 Dec,
+  publisher =	 {Springer-Verlag},
+  address =      {Berlin, Heidelberg},
+  isbn =         {3-540-49994-6}
+}
+
+@InProceedings{bauer07,
+  author =	 {Andreas Bauer and Martin Leucker and Christian Schallhart},
+  editor =       {O. Sokolsky and S. Tasiran},
+  title =	 {The good, the bad, and the ugly, but how ugly is ugly?},
+  booktitle =	 {Proceedings of the 7th International
+                  Workshop on Runtime Verification (RV)},
+  year =	 2007,
+  series =	 {Lecture Notes in Computer Science},
+  volume =       4839,
+  month =        Nov,
+  pages =        {126--138},
+  publisher =	 {Springer-Verlag},
+  address =      {Berlin, Heidelberg},
+  isbn =         {978-3-540-77394-8}
+}
+
+@article{bauer10,
+  author =	 {Andreas Bauer and Martin Leucker and Christian Schallhart},
+  title =	 {Comparing {LTL} semantics for runtime verification},
+  journal =      {Logic and Computation},
+  year =	 2010,
+  volume =       20,
+  number =       3,
+  pages =        {651--674},
+}
+
+@article{bauer11,
+ author = {Bauer, Andreas and Leucker, Martin and Schallhart, Christian},
+ title = {Runtime Verification for {LTL} and {TLTL}},
+ journal = {ACM Trans. Softw. Eng. Methodol.},
+ issue_date = {September 2011},
+ volume = {20},
+ number = {4},
+ month = sep,
+ year = {2011},
+ issn = {1049-331X},
+ pages = {14:1--14:64},
+ articleno = {14},
+ numpages = {64},
+ url = {http://doi.acm.org/10.1145/2000799.2000800},
+ doi = {10.1145/2000799.2000800},
+ acmid = {2000800},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Assertion checkers, monitors, runtime verification},
+} 
+
+
+@inproceedings{DM85,
+  author = {Dembinski, Piotr and Maluszynski, Jan},
+  booktitle = {Proceedings of the 1985 Symposium on Logic Programming,
+               Boston, Massachusetts, USA, July 15-18, 1985},
+  pages = {29-38},
+  title = {AND-Parallelism with Intelligent Backtracking for Annotated Logic Programs.},
+  publisher = {IEEE-CS}, 
+  year = 1985
+}
+
+
+
+
+@proceedings{havelund02,
+  editor    = {Joost-Pieter Katoen and
+               Perdita Stevens},
+  title     = {Tools and Algorithms for the Construction and Analysis of
+               Systems, 8th International Conference, TACAS 2002, Held
+               as Part of the Joint European Conference on Theory and Practice
+               of Software, ETAPS 2002, Grenoble, France, April 8-12, 2002,
+               Proceedings},
+  booktitle = {TACAS},
+  publisher = {Springer},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {2280},
+  year      = {2002},
+  isbn      = {3-540-43419-4},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
+@article{Schneider00,
+ author = {Schneider, Fred B.},
+ title = {Enforceable Security Policies},
+ journal = {ACM Trans. Inf. Syst. Secur.},
+ issue_date = {Feb. 2000},
+ volume = {3},
+ number = {1},
+ month = feb,
+ year = {2000},
+ issn = {1094-9224},
+ pages = {30--50},
+ numpages = {21},
+ url = {http://doi.acm.org/10.1145/353323.353382},
+ doi = {10.1145/353323.353382},
+ acmid = {353382},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {EM security policies, SASI, inlined reference monitors, proof carrying code, safety properties, security automata, security policies},
+} 
+
+
+
+
+@article{LS09,
+title = "A brief account of runtime verification ",
+journal = "The Journal of Logic and Algebraic Programming ",
+volume = "78",
+number = "5",
+pages = "293 - 303",
+year = "2009",
+note = "The 1st Workshop on Formal Languages and Analysis of Contract-Oriented Software (FLACOS'07) ",
+issn = "1567-8326",
+doi = "http://dx.doi.org/10.1016/j.jlap.2008.08.004",
+url = "http://www.sciencedirect.com/science/article/pii/S1567832608000775",
+author = "Martin Leucker and Christian Schallhart",
+keywords = "Verification",
+keywords = "Testing",
+keywords = "Monitoring",
+keywords = "Assertion checking "
+}
+
+
+
+
+@article{HR04,
+ author = {Havelund, Klaus and Ro\c{s}u, Grigore},
+ title = {Efficient monitoring of safety properties},
+ journal = {Int. J. Softw. Tools Technol. Transf.},
+ issue_date = {August 2004},
+ volume = {6},
+ number = {2},
+ month = aug,
+ year = {2004},
+ issn = {1433-2779},
+ pages = {158--173},
+ numpages = {16},
+ url = {http://dx.doi.org/10.1007/s10009-003-0117-6},
+ doi = {10.1007/s10009-003-0117-6},
+ acmid = {1014990},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ keywords = {Monitoring, Safety, Temporal logics}
+} 
+
+@InProceedings{BGT09,
+  author =	 {Andreas Bauer and Rajeev Gore and Alwen Tiu},
+  editor =       {M. Leucker and C. Morgan},
+  title =	 {A first-order policy language for history-based transaction monitoring},
+  booktitle =	 {Proceedings of the 6th International Colloquium
+                  on Theoretical Aspects of Computing (ICTAC)},
+  year =	 2009,
+  series =	 {Lecture Notes in Computer Science},
+  volume =	 5684,
+  pages =        {96--111},
+  month =	 Aug,
+  publisher =	 {Springer-Verlag},
+  address =      {Berlin, Heidelberg},
+  isbn =         {978-3-642-03465-7}
+}
+
+@article{KNS08,
+ author = {Krukow, Karl and Nielsen, Mogens and Sassone, Vladimiro},
+ title = {A Logical Framework for History-based Access Control and Reputation Systems},
+ journal = {J. Comput. Secur.},
+ issue_date = {January 2008},
+ volume = {16},
+ number = {1},
+ month = jan,
+ year = {2008},
+ issn = {0926-227X},
+ pages = {63--101},
+ numpages = {39},
+ url = {http://dl.acm.org/citation.cfm?id=1370684.1370686},
+ acmid = {1370686},
+ publisher = {IOS Press},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+ keywords = {Reputation systems, dynamic model checking, event structures, history-based access control, linear temporal logic, trust management},
+} 
+
+@incollection{DJLS08,
+year={2008},
+isbn={978-3-540-89246-5},
+booktitle={Runtime Verification},
+volume={5289},
+series={Lecture Notes in Computer Science},
+editor={Leucker, Martin},
+doi={10.1007/978-3-540-89247-2_6},
+title={Checking Traces for Regulatory Conformance},
+url={http://dx.doi.org/10.1007/978-3-540-89247-2_6},
+publisher={Springer Berlin Heidelberg},
+author={Dinesh, Nikhil and Joshi, Aravind and Lee, Insup and Sokolsky, Oleg},
+pages={86-103}
+}
+
+
+
+@inproceedings{CCNLE12,
+ author = {Chowdhury, Omar and Chen, Haining and Niu, Jianwei and Li, Ninghui and Bertino, Elisa},
+ title = {On XACML's Adequacy to Specify and to Enforce HIPAA},
+ booktitle = {Proceedings of the 3rd USENIX Conference on Health Security and Privacy},
+ series = {HealthSec'12},
+ year = {2012},
+ location = {Bellevue, WA},
+ pages = {11--20},
+ numpages = {10},
+ url = {http://dl.acm.org/citation.cfm?id=2372366.2372381},
+ acmid = {2372381},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
+
+
+
+
+
+@article{ANB98,
+year={1998},
+issn={0022-3611},
+journal={Journal of Philosophical Logic},
+volume={27},
+number={3},
+doi={10.1023/A:1004275029985},
+title={Modal Languages and Bounded Fragments of Predicate Logic},
+url={http://dx.doi.org/10.1023/A#3A1004275029985},
+publisher={Kluwer Academic Publishers},
+author={Andr\'{e}ka, Hajnal and N\'{e}meti, Istv\'{a}n and van Benthem, Johan},
+pages={217-274},
+language={English}
+}
+
+@book{MP95,
+ author = {Manna, Zohar and Pnueli, Amir},
+ title = {Temporal verification of reactive systems: safety},
+ year = {1995},
+ isbn = {0-387-94459-1},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {New York, NY, USA}
+} 
+
+
+@inproceedings{Pnueli77,
+ author = {Pnueli, Amir},
+ title = {The temporal logic of programs},
+ booktitle = {Proceedings of the 18th Annual Symposium on Foundations of Computer Science},
+ series = {SFCS '77},
+ year = {1977},
+ pages = {46--57},
+ numpages = {12},
+ url = {http://dx.doi.org/10.1109/SFCS.1977.32},
+ doi = {10.1109/SFCS.1977.32},
+ acmid = {1382534},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA}
+} 
+
+
+@inproceedings{MP88,
+  added-at = {2009-10-08T00:00:00.000+0200},
+  author = {Manna, Zohar and Pnueli, Amir},
+  biburl = {http://www.bibsonomy.org/bibtex/25e97cb665bc7fb97cf0737be6ece1963/dblp},
+  booktitle = {REX Workshop},
+  crossref = {conf/rex/1988},
+  date = {2009-10-08},
+  description = {dblp},
+  editor = {de Bakker, J. W. and de Roever, Willem P. and Rozenberg, Grzegorz},
+  ee = {http://dx.doi.org/10.1007/BFb0013024},
+  interhash = {13edfefca07ec447998da9abb8f2132a},
+  intrahash = {5e97cb665bc7fb97cf0737be6ece1963},
+  isbn = {3-540-51080-X},
+  keywords = {dblp},
+  pages = {201-284},
+  publisher = {Springer},
+  series = {Lecture Notes in Computer Science},
+  timestamp = {2009-10-08T00:00:00.000+0200},
+  title = {The anchored version of the temporal framework.},
+  volume = 354,
+  year = 1988
+}
+
+
+@article{MTL, 
+year={1990},
+issn={0922-6443},
+journal={Real-Time Systems},
+volume={2},
+number={4},
+doi={10.1007/BF01995674},
+title={Specifying real-time properties with metric temporal logic},
+url={http://dx.doi.org/10.1007/BF01995674},
+publisher={Kluwer Academic Publishers},
+author={Koymans, Ron},
+pages={255-299},
+language={English}
+}
+
+@inproceedings{BKM10,
+ author = {Basin, David and Klaedtke, Felix and M\"{u}ller, Samuel},
+ title = {Monitoring Security Policies with Metric First-order Temporal Logic},
+ booktitle = {Proceedings of the 15th ACM Symposium on Access Control Models and Technologies},
+ series = {SACMAT '10},
+ year = {2010},
+ isbn = {978-1-4503-0049-0},
+ location = {Pittsburgh, Pennsylvania, USA},
+ pages = {23--34},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1809842.1809849},
+ doi = {10.1145/1809842.1809849},
+ acmid = {1809849},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {access control, compliance, monitoring, security policies, separation of duty, temporal logic, usage control},
+} 
+
+@incollection{LMS09,
+year={2009},
+isbn={978-3-642-03747-4},
+booktitle={Trust, Privacy and Security in Digital Business},
+volume={5695},
+series={Lecture Notes in Computer Science},
+editor={Fischer-H\"{u}bner, Simone and Lambrinoudakis, Costas and Pernul, G\"{u}nther},
+doi={10.1007/978-3-642-03748-1_8},
+title={A Formalization of HIPAA for a Medical Messaging System},
+url={http://dx.doi.org/10.1007/978-3-642-03748-1_8},
+publisher={Springer Berlin Heidelberg},
+author={Lam, PeifungE. and Mitchell, JohnC. and Sundaram, Sharada},
+pages={73-85}
+}
+
+
+
+
+@inproceedings{IYW06,
+ author = {Keith Irwin and Ting Yu and William H. Winsborough},
+ title = {On the modeling and analysis of obligations},
+ booktitle = {Proceedings of the 13th ACM conference on Computer and communications security},
+ year = {2006},
+ isbn = {1-59593-518-5},
+ pages = {134--143},
+ location = {Alexandria, Virginia, USA},
+ doi = {http://doi.acm.org/10.1145/1180405.1180423},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+ }
+ 
+ @inproceedings{Chowdhury13,
+ author = {Chowdhury, Omar and Gampe, Andreas and Niu, Jianwei and von Ronne, Jeffery and Bennatt, Jared and Datta, Anupam and Jia, Limin and Winsborough, William H.},
+ title = {Privacy Promises That Can Be Kept: A Policy Analysis Method with Application to the HIPAA Privacy Rule},
+ booktitle = {Proceedings of the 18th ACM Symposium on Access Control Models and Technologies},
+ series = {SACMAT '13},
+ year = {2013},
+ isbn = {978-1-4503-1950-8},
+ location = {Amsterdam, The Netherlands},
+ pages = {3--14},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2462410.2462423},
+ doi = {10.1145/2462410.2462423},
+ acmid = {2462423},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {HIPAA, obligations, policy analysis, privacy policy},
+} 
+
+@INPROCEEDINGS{Fong04, 
+author={Fong, P.W.L.}, 
+booktitle={Security and Privacy, 2004. Proceedings. 2004 IEEE Symposium on}, 
+title={Access control by tracking shallow execution history}, 
+year={2004}, 
+month={May}, 
+pages={43-55}, 
+keywords={authorisation;automata theory;system monitoring;Chinese Wall policy;access control;access pattern;assured pipelines;automata models;execution history tracking;execution monitoring;fine-grained policy classification;low-water-mark policy;mobile code platforms;one-out-of-k authorization;operating systems;policy classes;policy languages;scriptable applications;security policies;software execution;system services;Access control;Application software;Automatic control;Control systems;History;Information security;Lattices;Monitoring;Operating systems;Protection}, 
+doi={10.1109/SECPRI.2004.1301314}, 
+ISSN={1081-6011},}
+ 
+
+ @inproceedings{LMSS12,
+ author = {Lam, Peifung E. and Mitchell, John C. and Scedrov, Andre and Sundaram, Sharada and Wang, Frank},
+ title = {Declarative Privacy Policy: Finite Models and Attribute-based Encryption},
+ booktitle = {Proceedings of the 2Nd ACM SIGHIT International Health Informatics Symposium},
+ series = {IHI '12},
+ year = {2012},
+ isbn = {978-1-4503-0781-9},
+ location = {Miami, Florida, USA},
+ pages = {323--332},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2110363.2110401},
+ doi = {10.1145/2110363.2110401},
+ acmid = {2110401},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {abe, compliance, ehr, privacy policy},
+} 
+
+
+
+@article{LBW05,
+title = {Edit automata: enforcement mechanisms for run-time security policies.},
+author = {Ligatti, Jay and Bauer, Lujo and Walker, David},
+journal = {Int. J. Inf. Sec. '05}
+}
+
+
+
+@incollection{BKMZ13,
+year={2013},
+isbn={978-3-642-40786-4},
+booktitle={Runtime Verification},
+volume={8174},
+series={Lecture Notes in Computer Science},
+editor={Legay, Axel and Bensalem, Saddek},
+doi={10.1007/978-3-642-40787-1_3},
+title={Monitoring of Temporal First-Order Properties with Aggregations},
+url={http://dx.doi.org/10.1007/978-3-642-40787-1_3},
+publisher={Springer Berlin Heidelberg},
+author={Basin, David and Klaedtke, Felix and Marinovic, Srdjan and Z\u{a}linescu, Eugen},
+pages={40-58}
+}
+
+
+@misc{hipaaViolation,
+    author = "Paul Roberts",
+    title = "{HIPAA Bares Its Teeth: \$4.3m Fine For Privacy Violation}",
+    note = "Available at https://threatpost.com/en\_us/blogs/hipaa-bares-its-teeth-43m-fine-privacy-violation-022311",
+}
+
+@incollection{MTL2, 
+year={1992},
+isbn={978-3-540-55564-3},
+booktitle={Real-Time: Theory in Practice},
+volume={600},
+series={Lecture Notes in Computer Science},
+editor={Bakker, J.W. and Huizing, C. and Roever, W.P. and Rozenberg, G.},
+doi={10.1007/BFb0031988},
+title={Logics and models of real time: A survey},
+url={http://dx.doi.org/10.1007/BFb0031988},
+publisher={Springer Berlin Heidelberg},
+keywords={Temporal logic; finite-state machines; transition systems; semantics; verification; real time},
+author={Alur, Rajeev and Henzinger, ThomasA.},
+pages={74-106}
+}
+
+@article{PRBAC,
+ author = {Ni, Qun and Bertino, Elisa and Lobo, Jorge and Brodie, Carolyn and Karat, Clare-Marie and Karat, John and Trombeta, Alberto},
+ title = {Privacy-aware Role-based Access Control},
+ journal = {ACM Trans. Inf. Syst. Secur.},
+ issue_date = {July 2010},
+ volume = {13},
+ number = {3},
+ month = jul,
+ year = {2010},
+ issn = {1094-9224},
+ pages = {24:1--24:31},
+ articleno = {24},
+ numpages = {31},
+ url = {http://doi.acm.org/10.1145/1805974.1805980},
+ doi = {10.1145/1805974.1805980},
+ acmid = {1805980},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Privacy, Role-based access control, model, purpose},
+} 
+
+
+
+
+@TechReport{ROSU07,
+author = {Grigore Ro\c{s}u},
+title = "{On Safety Properties and Their Monitoring}",
+institution = {Department of Computer Science, University of Illinois at Urbana-Champaign},
+Number     = {UIUCDCS-R-2007-2850},
+Year       = {2007}
+}
+
+@inproceedings{HMR12,
+author={Soha Hussein and Patrick O'Neil Meredith and Grigore Ro\c{s}u},
+title="Security-Policy Monitoring and Enforcement with {JavaMOP}",
+booktitle={ACM SIGPLAN Seventh Workshop on Programming Languages and Analysis for Security (PLAS'12)},
+year={2012},
+pages={3:1-3:11},
+doi={10.1145/2336717.2336720},
+}
+
+@inproceedings{MR10,
+author={Patrick Meredith and Grigore Ro\c{s}u},
+title={Runtime Verification with the {RV} System},
+booktitle={First International Conference on Runtime Verification (RV'10)},
+year={2010},
+publisher={Springer},
+series = {Lecture Notes in Computer Science},
+volume = {6418},
+pages={136--152}
+}
+
+@inproceedings{MR13,
+    author = "Meredith, Patrick and Ro\c{s}u, Grigore",
+    publisher = "IEEE/ACM",
+    title = "Efficient Parametric Runtime Verification with Deterministic String Rewriting",
+    booktitle = "Proceedings of 28th IEEE/ACM International Conference. Automated Software Engineering (ASE'13)",
+    month = "May",
+    year = "2013",
+    pages = "NA"
+}
+
+@inproceedings{PMCR08,
+title={Hardware Runtime Monitoring for Dependable COTS-based Real-Time Embedded Systems},
+author={Rodolfo Pellizzoni and Patrick Meredith and Marco Caccamo and Grigore Ro\c{s}u},
+booktitle={Proceedings of the 29th IEEE Real-Time System Symposium (RTSS'08)},
+year={2008},
+pages={481--491},
+doi={doi:10.1109/RTSS.2008.43}
+}
+
+@inproceedings{MJCR08,
+  title = {Efficient Monitoring of Parametric Context-Free Patterns},
+  author = {Patrick Meredith and Dongyun Jin and Feng Chen and Grigore Ro\c{s}u},
+  booktitle = {Proceedings of the 23rd IEEE/ACM International Conference on Automated Software Engineering(ASE '08)},
+  year = {2008},
+  publisher = {IEEE/ACM},
+  pages = {148--157},
+  doi={doi:10.1109/ASE.2008.25}
+  note = {A previous version of this work was published as the technical report UIUCDCS-R-2008-2954, which is available on https://www.ideals.illinois.edu/handle/2142/11446}
+}
+
+@TECHREPORT{RH01,
+    author = {Grigore Ro\c{s}u and Klaus Havelund},
+    title = {Synthesizing Dynamic Programming Algorithms From Linear Temporal Logic Formulae},
+    institution = {Research Institute for Advanced Computer Science},
+    year = {2001}
+}
+
+@article{RH05,
+year={2005},
+issn={0928-8910},
+journal={Automated Software Engineering},
+volume={12},
+number={2},
+doi={10.1007/s10515-005-6205-y},
+title={Rewriting-Based Techniques for Runtime Verification},
+url={http://dx.doi.org/10.1007/s10515-005-6205-y},
+publisher={Kluwer Academic Publishers},
+keywords={runtime analysis; rewriting; verification},
+author={Ro\c{s}u, Grigore and Havelund, Klaus},
+pages={151-197},
+language={English}
+}
+
+
+@inproceedings{RCB08,
+  author={Grigore Ro\c{s}u and Feng Chen and Thomas Ball},
+  title={Synthesizing Monitors for Safety Properties  -- This Time With Calls and Returns --},
+  booktitle={Workshop on Runtime Verification (RV'08)},
+  year={2008},
+  publisher = {Springer},
+  series = {Lecture Notes in Computer Science},
+  volume = {5289},
+  pages = {51--68}
+}
+
+
+@inproceedings{RB06,
+title ={{Allen Linear} ({Interval}) {Temporal Logic} --{Translation} to {LTL} and {Monitor} {Synthesis}},
+author = {Grigore Ro\c{s}u and Saddek Bensalem},
+booktitle = {Proceedings of 18th International Conference on Computer Aided Verification (CAV'06)},
+publisher = {Springer},
+series = {Lecture Notes in Computer Science},
+volume = {4144},
+pages = {263--277},
+year = {2006}
+}
+
+@inproceedings{MR05,
+title={Efficient Monitoring of $\omega$-Languages},
+author={Marcelo d'Amorim and Grigore Ro\c{s}u},
+booktitle={Proceedings of 17th International Conference on Computer-aided Verification (CAV'05)},
+publisher = {Springer},
+series = {Lecture Notes in Computer Science},
+volume = {3576},
+pages = {364 - 378},
+year={2005}
+}
+
+@article{BJKZ13,
+ author = {Basin, David and Jug{\'e}, Vincent and Klaedtke, Felix and Z\u{a}linescu, Eugen},
+ title = {Enforceable Security Policies Revisited},
+ journal = {ACM Trans. Inf. Syst. Secur.},
+ issue_date = {June 2013},
+ volume = {16},
+ number = {1},
+ month = jun,
+ year = {2013},
+ issn = {1094-9224},
+ pages = {3:1--3:26},
+ articleno = {3},
+ numpages = {26},
+ url = {http://doi.acm.org/10.1145/2487222.2487225},
+ doi = {10.1145/2487222.2487225},
+ acmid = {2487225},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Automata, monitoring, safety properties, security policies, temporal logic},
+} 
+
+@InProceedings{SA01,
+   author       = "Lujo Bauer and Jarred Ligatti and David Walker",
+   institution  = "Princeton University, USA",
+   title        = "More Enforceable Security Policies",
+   booktitle    = "{Foundations of Computer Security}: proceedings of the
+                   FLoC'02 workshop on Foundations of Computer Security",
+   pages        = "95--104",
+   year         = "2002",
+   editor       = "Iliano Cervesato",
+   address      = "Copenhagen, Denmark",
+   month        = "25--26 July",
+   publisher    = "DIKU Technical Report",
+   url 		= {http://www.cs.princeton.edu/~jligatti/papers/mesp.pdf}
+}
+
+
+
+
+
+@article{SA02,
+ author = {Martinell, Fabio and Matteucci, Ilaria},
+ title = {Through Modeling to Synthesis of Security Automata},
+ journal = {Electron. Notes Theor. Comput. Sci.},
+ volume = {179},
+ year = {2007},
+ issn = {1571-0661},
+ pages = {31--46},
+ doi = {http://dx.doi.org/10.1016/j.entcs.2006.08.029},
+ publisher = {Elsevier Science Publishers B. V.},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+ }
+
+
+@inproceedings{SA03,
+ author = {Huisman, Marieke and Tamalet, Alejandro},
+ title = {A Formal Connection between Security Automata and JML Annotations},
+ booktitle = {FASE '09: Proceedings of the 12th International Conference on Fundamental Approaches to Software Engineering},
+ year = {2009},
+ isbn = {978-3-642-00592-3},
+ pages = {340--354},
+ location = {York, UK},
+ doi = {http://dx.doi.org/10.1007/978-3-642-00593-0_23},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ }
+
+ @article{LBW09,
+ author = {Ligatti, Jay and Bauer, Lujo and Walker, David},
+ title = {Run-Time Enforcement of Nonsafety Policies},
+ journal = {ACM Trans. Inf. Syst. Secur.},
+ issue_date = {January 2009},
+ volume = {12},
+ number = {3},
+ month = jan,
+ year = {2009},
+ issn = {1094-9224},
+ pages = {19:1--19:41},
+ articleno = {19},
+ numpages = {41},
+ url = {http://doi.acm.org/10.1145/1455526.1455532},
+ doi = {10.1145/1455526.1455532},
+ acmid = {1455532},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Security policies, liveness, monitoring, policy enforcement, safety, security automata},
+} 
+
+ 
+
+
+@inproceedings{chomicki93,
+ author = {Chomicki, Jan and Niwi\'{n}ski, Damian},
+ title = {On the Feasibility of Checking Temporal Integrity Constraints},
+ booktitle = {Proceedings of the Twelfth ACM SIGACT-SIGMOD-SIGART Symposium on Principles of Database Systems},
+ series = {PODS '93},
+ year = {1993},
+ isbn = {0-89791-593-3},
+ location = {Washington, D.C., USA},
+ pages = {202--213},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/153850.153876},
+ doi = {10.1145/153850.153876},
+ acmid = {153876},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@article{chomicki95,
+ author = {Chomicki, Jan},
+ title = {Efficient Checking of Temporal Integrity Constraints Using Bounded History Encoding},
+ journal = {ACM Trans. Database Syst.},
+ issue_date = {June 1995},
+ volume = {20},
+ number = {2},
+ month = jun,
+ year = {1995},
+ issn = {0362-5915},
+ pages = {149--186},
+ numpages = {38},
+ url = {http://doi.acm.org/10.1145/210197.210200},
+ doi = {10.1145/210197.210200},
+ acmid = {210200},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {active databases, database integrity, integrity constraints, real-time databases, temporal databases, temporal logic, triggers},
+} 
+
