done with the introduction

--- a/rv2015/command.tex
+++ b/rv2015/command.tex
@@ -94,7 +94,9 @@
 \newcommand{\dom}{\funcname{dom}\xspace} %domain
 % \newcommand{\monitor}{\funcname{Policy-Monitor}\xspace}
 %\newcommand{\monitor}{\funcname{pr\'ecis}\xspace}
-\newcommand{\monitor}{\funcname{agmon}\xspace}
+%\newcommand{\monitor}{\funcname{agmon}\xspace}
+
+\newcommand{\monitor}{\funcname{EgMon}\xspace}
 
 \newcommand{\statesize}{\ensuremath{\Upsilon}\xspace}
 
