Updated architecture section

--- a/rv2015/command.tex
+++ b/rv2015/command.tex
@@ -166,3 +166,4 @@
 \newcommand{\histst}[2][\policy]{\ensuremath{{S}^{#2}_{#1}}}
 \newcommand{\incrS}{\funcname{incrS}\xspace}
 \newcommand{\policyv}{\ensuremath{\phi}\xspace}
+\newcommand{\sfmap}{\textsf{SF Map}\xspace}
